--- a/styles/style.css
+++ b/styles/style.css
@@ -9,12 +9,13 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 10px;
   padding: 20px;
   color: #fff;
 }
 
 .logo {
-  margin-left: 10;
+  margin-left: 40px;
 }
 
 .navigation {
@@ -36,29 +37,34 @@ body {
   text-decoration: none;
 }
 
-.buttons {
+.menu_buttons{
   display: flex;
   gap: 10px;
 }
 
-.button1 button {
-  background-color: #3a3456;
-  border: 2px solid white;
-  border-radius: 50px;
-  color: white;
-  padding: 10px 20px;
-  font-size: 16px;
+.menu_button_1,
+.menu_button_2,
+.main_button {
+  margin-left: 20px;
+  padding: 10px 10px;
+  border: none;
+  border-radius: 20px;
+  font-weight: bold;
+  cursor: pointer;
 }
 
-.button2 button,
-.main .text-area button {
-  background: linear-gradient(45deg, #7e57c2, #b39ddb);
-  border: none;
-  border-radius: 50px;
-  color: white;
-  padding: 10px 20px;
-  font-size: 16px;
+.menu_button_1 {
+  background-color: #3a3456;
+  border: solid 1px;
+  color: #fff;
 }
+
+.menu_button_2,
+.main_button {
+  background: linear-gradient(45deg, #7e57c2, #b39ddb);
+  color: #3e3d56;
+}
+
 
 .main {
   display: grid;
@@ -67,32 +73,31 @@ body {
   gap: 20px;
 }
 
-.text-area,
-.picture-area {
-  padding: 20px;
-  border-radius: 10px;
+.main {
+background-image: url(/assets/images/Mask\ group.png);
+background-repeat: no-repeat;
+background-position: right;
+background-size: contain;
+margin-left: 20px;
 }
 
-.text-area h2 {
-  font-size: 36px;
-  margin-bottom: 20px;
-  color: white;
+.main_text-area {
+  max-width: 600px;
 }
 
-.text-area p {
-  font-size: 18px;
-  margin-bottom: 20px;
-  color: white;
+.main_text-area h2 {
+  font-size: 3em;
+  color: #b39ddb;
 }
 
-.picture-area img {
-  max-width: 100%;
-  height: auto;
-  border-radius: 10px;
-  justify-self: end;
+.main_text-area p {
+  font-size: 1.2em;
+  color: #fff;
+  line-height: 1.5;
+  margin-bottom: 40px;
 }
 
-.sections {
+.footer_sections {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 2px;
@@ -100,15 +105,14 @@ body {
   border-radius: 50px;
 }
 
-.section {
+.footer_section_1,
+.footer_section_2,
+.footer_section_3 {
   background-image: radial-gradient(circle, #3a3456, #211e2e);
   padding: 20px;
   color: #fff;
 }
 
-.section h3 {
-  margin-bottom: 10px;
-}
 
 @media (max-width: 768px) {
     .header {
@@ -124,7 +128,7 @@ body {
         padding: 10px 0;
     }
 
-    .buttons {
+    .menu_buttons {
         flex-direction: column;
         align-items: center;
         gap: 10px;
@@ -135,14 +139,6 @@ body {
         grid-template-columns: 1fr;
     }
 
-    .text-area {
-        order: 2;
-    }
-
-    .picture-area {
-        order: 1;
-    }
-
-    .sections {
+    .footer_sections {
         grid-template-columns: 1fr;
     }
